# strava-insights

./: .dockerignore  .env.example  .env.production.template  .gitignore  AGENTS.md  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  make.ps1  requirements.txt
backend/: .env.secrets.template  .env.template  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260309_0001_initial_schema.py  20260309_0002_activity_summary_fields.py  20260310_0003_activity_strava_id_bigint.py  20260316_0004_activity_heart_rate_drift.py  20260316_0005_period_summary_hr_drift.py  20260319_0006_running_thresholds.py  20260319_0007_drop_unused_legacy_columns.py  20260319_0008_threshold_history.py  20260319_0009_drop_user_profiles_table.py  (+3 more)
backend/app/: main.py  run_server.py
backend/tests/: conftest.py  test_activity_analytics.py  test_aggregations.py  test_auth_session.py  test_cache_keys.py  test_health.py  test_read_endpoint_integration.py  test_routes.py  test_strava_oauth_service.py  test_sync_orchestrator.py  test_token_cipher.py
worker/: .env.secrets.template  .env.template  Dockerfile  Dockerfile.prod  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
worker/app/: cache.py  cache_keys.py  celery_app.py  config.py  db.py  logging.py  models.py  repositories.py  security.py  strava_client.py
worker/tests/: test_activity_summary.py  test_cache_invalidator.py  test_daily_sync_scheduler.py  test_full_import_service.py  test_read_model_builder.py  test_sync_tasks.py
(+169 files in other folders)
